fixing a navbar issue on mobile

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -3,7 +3,7 @@
 
 .menu {
     @include gradient;
-
+    z-index: 100;
     li {
         padding: 0 0.7rem;
     }
